All Btns for  partie cyle / moteur / electrique done

--- a/src/app/Seller/page-announce-pro/tab-categories/tab-categories.component.html
+++ b/src/app/Seller/page-announce-pro/tab-categories/tab-categories.component.html
@@ -165,13 +165,97 @@
       <div class="collapse" id="collapseMoteur">
         <div class="card card-body">
           <p>
-            <a class="btn btn-primary" data-toggle="collapse" href="#collapseMoteur" role="button" aria-expanded="false"
-              aria-controls="collapseMoteur">
-              Partie Moteur
+            <a class="btn btn-primary" data-toggle="collapse" href="#collapseMoteurSub" role="button" aria-expanded="false"
+              aria-controls="collapseMoteurSub">
+              Moteur
             </a>
           </p>
+          <div class="collapse" id="collapseMoteurSub">
+            <button>Moteur Complet</button>
+            <button>Carter Gauche</button>
+            <button>Carter Droit</button>
+            <button>Pièces moteur au détail</button>
+            <button>Axe moteur</button>
+          </div>
+
+          <p>
+            <a class="btn btn-primary" data-toggle="collapse" href="#collapseCarb" role="button" aria-expanded="false"
+              aria-controls="collapseCarb">
+              Carburation/Injection
+            </a>
+          </p>
+          <div class="collapse" id="collapseCarb">
+            <button>Carburateur</button>
+            <button>Pipe Admission</button>
+            <button>Bride</button>
+            <button>Injection</button>
+          </div>
+
+          <p>
+            <a class="btn btn-primary" data-toggle="collapse" href="#collapseBoiteAir" role="button" aria-expanded="false"
+              aria-controls="collapseBoiteAir">
+              Boite A Air
+            </a>
+          </p>
+          <div class="collapse" id="collapseBoiteAir">
+            <button>Boite A Air</button>
+            <button>Filtre A Air</button>
+          </div>
+
+          <p>
+            <a class="btn btn-primary" data-toggle="collapse" href="#collapseDemarreur" role="button" aria-expanded="false"
+              aria-controls="collapseDemarreur">
+              Démarreur
+            </a>
+          </p>
+          <div class="collapse" id="collapseDemarreur">
+            <button>Démarreur</button>
+            <button>Roue Libre Démarreur</button>
+          </div>
+
+          <p>
+            <a class="btn btn-primary" data-toggle="collapse" href="#collapseEchappement" role="button" aria-expanded="false"
+              aria-controls="collapseEchappement">
+              Echappement
+            </a>
+          </p>
+          <div class="collapse" id="collapseEchappement">
+            <button>Collecteur Echappement</button>
+            <button>Pot Echappement</button>
+            <button>Sonde Echappement</button>
+          </div>
+
+          <p>
+            <a class="btn btn-primary" data-toggle="collapse" href="#collapseRadiateur" role="button" aria-expanded="false"
+              aria-controls="collapseRadiateur">
+              Radiateur
+            </a>
+          </p>
+          <div class="collapse" id="collapseRadiateur">
+            <button>Radiateur Complet</button>
+            <button>Radiateur</button>
+            <button>Calorstat</button>
+            <button>Durite Refroidissement</button>
+            <button>Bouchon de Radiateur</button>
+            <button>Ventilateur</button>
+            <button>Vase Expansion</button>
+          </div>
+
+          <p>
+            <a class="btn btn-primary" data-toggle="collapse" href="#collapseCables" role="button" aria-expanded="false"
+              aria-controls="collapseCables">
+              Câbles
+            </a>
+          </p>
+          <div class="collapse" id="collapseCables">
+            <button>Câbles Accélérateur</button>
+            <button>Câbles Starter</button>
+            <button>Câbles Embrayage</button>
+          </div>
+
         </div>
       </div>
+
     </div>
 
     <!--PARTIE ELEC-->
@@ -184,8 +268,75 @@
       </p>
       <div class="collapse" id="collapseElectrique">
         <div class="card card-body">
-          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim
-          keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+          <p>
+            <a class="btn btn-primary" data-toggle="collapse" href="#collapseFaisceaux" role="button" aria-expanded="false"
+              aria-controls="collapseFaisceaux">
+              Faisceaux Electrique
+            </a>
+          </p>
+          <div class="collapse" id="collapseFaisceaux">
+            <button>Faisceaux</button>
+            <button>Capteurs divers</button>
+            <button>Klaxon</button>
+            <button>Boîtier CDI</button>
+          </div>
+
+          <p>
+            <a class="btn btn-primary" data-toggle="collapse" href="#collapseEclairage" role="button" aria-expanded="false"
+              aria-controls="collapseEclairage">
+              Eclairage
+            </a>
+          </p>
+          <div class="collapse" id="collapseEclairage">
+            <button>Phare avant</button>
+            <button>Phare arrière</button>
+            <button>Eclairage Plaque</button>
+            <button>Clignotant</button>
+          </div>
+
+          <p>
+            <a class="btn btn-primary" data-toggle="collapse" href="#collapseCompteur" role="button" aria-expanded="false"
+              aria-controls="collapseCompteur">
+              Compteur
+            </a>
+          </p>
+          <div class="collapse" id="collapseCompteur">
+            <button>Compteur Complet</button>
+            <button>Cables Compteur</button>
+            <button>Entraineur Compteur</button>
+            <button>Pièces Compteur Divers</button>
+          </div>
+
+          <p>
+            <a class="btn btn-primary" data-toggle="collapse" href="#collapseSerrure" role="button" aria-expanded="false"
+              aria-controls="collapseSerrure">
+              Serrure/Kit Neiman
+            </a>
+          </p>
+          <div class="collapse" id="collapseSerrure">
+            <button>Kit Neiman Complet</button>
+            <button>Neiman</button>
+            <button>Serrure Réservoir</button>
+            <button>Serrure Arrière</button>
+          </div>
+
+          <button type="button" class="btn btn-primary">Régulateur Tension</button>
+
+          <button type="button" class="btn btn-primary">Relais Démarreur</button>
+
+          <button type="button" class="btn btn-primary">Alternateur</button>
+
+          <p>
+            <a class="btn btn-primary" data-toggle="collapse" href="#collapseCommodo" role="button" aria-expanded="false"
+              aria-controls="collapseCommodo">
+              Commodo
+            </a>
+          </p>
+          <div class="collapse" id="collapseCommodo">
+            <button>Commodo Gauche</button>
+            <button>Commodo Droit</button>
+          </div>
+
         </div>
       </div>
     </div>
