retour de la sidebar, leger bug chevauchement liste annonce en responsive sm

--- a/src/app/Buyer/announce-item/announce-item.component.css
+++ b/src/app/Buyer/announce-item/announce-item.component.css
@@ -1,39 +1,46 @@
-.announceItem {
-    font-size:0.7em;
-    margin-bottom:10px;
-}
-
-@media screen and (min-width: 769px) {
-    .announceItem {
-        font-size:1.0em;
-    }
-    br {
-        margin-bottom:4%;
-    }
-    
-}
-
-@media screen and (max-width: 768px){
-    .announceImage {
-        height:100%;
-        margin:auto;
-        padding: 0px 0px 0px 0px;
-    }
-}
-
 .announceText {
     padding-right:7px;
     padding-left:15px;
+    border-right:1px solid #dfdfdf;
 }
-.announceTitle {
-    font-size:1.2em;
+.groupOfText:not(:last-child){
+    margin:0px 0px 33% 0px;
 }
-.descParagraph {
-    margin:10% 0px;
+
+.groupOfText{
+    margin-right:30px;
 }
-.announcePrice {
-    font-size:1.85em;
-    margin-bottom:0px;
-    margin-right:8px;
-    color:red;
+.image {
+    width:inherit;
+    height:inherit;
+}
+.announceImage{
+    padding:0px;
+    margin-top:auto;
+    margin-bottom:auto;
+}
+.row {
+    margin:0;
+}
+.card-body{
+    padding:1.65rem;
+    font-family:Montserrat, Arial, Helvetica, sans-serif;
+    font-weight: 600;
+}
+.accessMore {
+    margin-top:auto;
+    margin-bottom:auto;
+    text-align:center;
+}
+.price{
+    font-size:2.3em;
+    font-weight: bold;
+}
+.card {
+    margin-top:10px;
+    margin-bottom:10px;
+}
+.btn-warning{
+    background-color:#FFC419;
+    min-width:70px;
 }
