--- a/src/app/Buyer/buyer-home/buyer-home.component.html
+++ b/src/app/Buyer/buyer-home/buyer-home.component.html
@@ -24,5 +24,9 @@
       <app-search-bar></app-search-bar>
     </div>
   </div>
+
+  <div class="row">
+    <app-categories class="col-8 col-md-4"></app-categories>
+    <app-announce-list class="col-12 col-sm-12 col-md-6 col-lg-8 announceList"></app-announce-list>
+  </div>
 </div>
-<app-categories class="col-4 categories"></app-categories>
