--- a/src/app/Buyer/announce-list/announce-list.component.html
+++ b/src/app/Buyer/announce-list/announce-list.component.html
@@ -1,6 +1,5 @@
-<div class="container">
+
   <div class="row announceContainer">
-        <app-announce-item class="col-12 col-sm-6" *ngFor="let placeholderForDBAnnounce of placeholderForDBListOfAnnounces.results"
+        <app-announce-item class="col-12" *ngFor="let placeholderForDBAnnounce of placeholderForDBListOfAnnounces.results"
               [placeholderForDBAnnounce]="placeholderForDBAnnounce"></app-announce-item>
   </div>
-</div>
