--- a/src/app/Buyer/categories/categories.component.css
+++ b/src/app/Buyer/categories/categories.component.css
@@ -1,15 +1,24 @@
+.container {
+    padding-right:0;
+}
+
+.row {
+    display:block;
+}
 .categories {
     background-color: #1a1a1a;
-    width: 15ch;
-    height: 2em;
+    width: 24ch;
+    height:3rem;
     text-align: end;
-    padding-top:3px;
+    padding:13px 40px 0px 0px;
     color: #F0F0F0;
-    padding-right: 3.5ch;
-    border-radius: 2px;
+    border-radius: 3px;
     cursor: pointer;
     margin-top: 20px;
     margin-left: 5px;
+    font-family:Rubik, Arial, Helvetica, sans-serif;
+    text-transform:uppercase;
+    font-size: 1.1em;
 }
 
 .categ {
@@ -29,12 +38,19 @@
 
 .menuButton {
     display:none;
+    left:0;
 }
 
 .closebtn {
     display:none;
 }
 @media screen and (max-width: 768px) {
+    .categories {
+        margin-left:30px;
+    }
+    .container {
+        padding-left:0;
+    }
     .sidenav {
         height: 100vh;
         width: 0;
@@ -50,8 +66,8 @@
     .sidenav .closebtn {
         position: absolute;
         float: left;
-        top: 15vh;
-        right: 25px;
+        top: 7.5vh;
+        right: 3px;
         font-size: 36px;
         margin-left: 50px;
         background: none;
@@ -66,17 +82,24 @@
         z-index: 3;
         border: none;
         background-color: none;
-        background-image: url('../../../assets/menuIcon.png');
-        background-size: 30px;
-        background-position: center;
+        background-image: url('../../../assets/right-arrow.png');
+        background-size: 20px;
+        background-position: left;
         background-repeat: no-repeat;
-        height: 40px;
-        width: 40px;
+        height: 50px;
+        width: 25px;
+        border-radius:0px 50px 50px 0px;
         display:block;
+        transition:all 0.3s;
+        opacity:0;
+    }
+    .menuButton:disabled:hover {
+        cursor: default;
     }
     .menuButton:hover {
         border: none;
         background-color: #F0F0F0;
+        cursor: pointer;
     }
 
 
