--- a/src/app/Buyer/categories/categories.component.html
+++ b/src/app/Buyer/categories/categories.component.html
@@ -1,11 +1,13 @@
-<div id="sidenav" class="sidenav">
-  <button class="closebtn" (click)="closeNav()">&times;</button>
-<div *ngFor="let categories of motoCategories.categories; let index=index">
-  <div class="categories arrowHead" (click)="collapse(index)">
-    {{categories.name}}
-  </div>
-  <app-sous-categories id="categ{{index}}" class="categ" [overIndex]="index*100" [categories]="categories"></app-sous-categories>
-</div>
-</div>
+<div id="sidenav" class="container sidenav">
 
-<button type="button" class="menuButton" (click)="openNav()"></button>
+  <button class="closebtn" (click)="closeNav()">&times;</button>
+  <div *ngFor="let categories of motoCategories.categories; let index=index">
+    <div class="row">
+      <div class="categories arrowHead" (click)="collapse(index)">
+        <b> Partie {{categories.name}} </b>
+      </div>
+      <app-sous-categories id="categ{{index}}" class="categ" [overIndex]="index*100" [categories]="categories"></app-sous-categories>
+    </div>
+  </div>
+</div>
+<button type="button" class="menuButton" id="menuButton" (click)="openNav()" [disabled]="disableButton"></button>
