--- a/src/app/Buyer/categories/sous-categories/sous-sous-categories/sous-sous-categories.component.html
+++ b/src/app/Buyer/categories/sous-categories/sous-sous-categories/sous-sous-categories.component.html
@@ -1,3 +1,3 @@
-<div *ngFor="let sousSousCategories of sousCategories.sousSousCategories">
-  <a href="#" class="badge badge-dark">{{sousSousCategories.name}}</a>
-</div>
+<span *ngFor="let sousSousCategories of sousCategories.sousSousCategories">
+  <a href="#" class="badge badge-outline badge-dark">{{sousSousCategories.name}}</a>
+</span>
