--- a/src/app/Buyer/home-background/home-background.component.css
+++ b/src/app/Buyer/home-background/home-background.component.css
@@ -11,7 +11,11 @@
     position:absolute;
     transition:all 0.4s linear;
 }
-
+.backgroundLogo  {
+    width:200px;
+    position:absolute;
+    z-index:1;
+}
 .closeButton {
     position:absolute;
     bottom:9%;
