--- a/src/app/Buyer/home-background/home-background.component.css
+++ b/src/app/Buyer/home-background/home-background.component.css
@@ -12,9 +12,11 @@
     transition:all 0.4s linear;
 }
 .backgroundLogo  {
-    width:200px;
+    width:350px;
     position:absolute;
     z-index:1;
+    left:37%;
+    top:25%;
 }
 .closeButton {
     position:absolute;
