jean pierre dusse

--- a/src/app/Buyer/buyer-home/buyer-home.component.html
+++ b/src/app/Buyer/buyer-home/buyer-home.component.html
@@ -26,7 +26,7 @@
   </div>
 
   <div class="row">
-    <app-categories class="col-8 col-md-4"></app-categories>
-    <app-announce-list class="col-12 col-sm-12 col-md-6 col-lg-8 announceList"></app-announce-list>
+    <app-categories class="col-0 col-md-4"></app-categories>
+    <app-announce-list class="col-12 col-md-8 announceList"></app-announce-list>
   </div>
 </div>
