--- a/src/app/Buyer/categories/categories.component.css
+++ b/src/app/Buyer/categories/categories.component.css
@@ -7,10 +7,10 @@
 }
 .categories {
     background-color: #1a1a1a;
-    width: 24ch;
+    width: 85%;
     height:3rem;
     text-align: end;
-    padding:13px 40px 0px 0px;
+    padding:13px 22px 0px 0px;
     color: #F0F0F0;
     border-radius: 3px;
     cursor: pointer;
@@ -18,7 +18,7 @@
     margin-left: 5px;
     font-family:Rubik, Arial, Helvetica, sans-serif;
     text-transform:uppercase;
-    font-size: 1.1em;
+    font-size: 1em;
 }
 
 .categ {
@@ -46,7 +46,7 @@
 }
 @media screen and (max-width: 768px) {
     .categories {
-        margin-left:30px;
+        margin-left:15px;
     }
     .container {
         padding-left:0;
