--- a/src/app/Buyer/categories/sous-categories/sous-categories.component.css
+++ b/src/app/Buyer/categories/sous-categories/sous-categories.component.css
@@ -1,7 +1,7 @@
 .list-group-item {
-    width:26ch;
+    width:80%;
     margin-top:5px;
-    margin-left:40px;
+    margin-left:15px;
     font-size:1em;
     cursor: pointer;
     font-family:Rubik, Arial, Helvetica, sans-serif;
@@ -9,8 +9,8 @@
 
 .list {
     display:none;
-    width:28ch;
-    margin-left: 7ch;
+    width:76%;
+    margin-left: 25px;
 }
 
 .arrowHead{
