--- a/src/app/Seller/page-announce-pro/page-announce-pro.component.html
+++ b/src/app/Seller/page-announce-pro/page-announce-pro.component.html
@@ -1,23 +1,7 @@
 <div class="container">
-    <div class="row mt-5">
-        <div class="col-md-5 mt-5">
-          <app-search-vhl></app-search-vhl>
-        </div>
-    
-        <div class="col-md-4 mt-5">
-          <app-search-immat></app-search-immat>
-        </div>
-        <div class="col-md-3 mt-5">
-            <div class="card">
-              <div class="card-header">
-                <p class="card-text">Votre moto</p>
-              </div>
-            </div>
-          </div>
-    </div>
-  <div class="row mt-5">
-  <div class="col-lg-12">
-    <ngb-tabset>
+  <!-- <div class="row mt-5">
+    <div class="col-lg-12">
+      <ngb-tabset>
         <ngb-tab title="Création annonce">
           <ng-template ngbTabContent>
             <app-tab-creation></app-tab-creation>
@@ -29,10 +13,16 @@
           </ng-template>
         </ngb-tab>
         <ngb-tab title="Historique">
-            <ng-template ngbTabContent>
-            </ng-template>
+          <ng-template ngbTabContent>
+          </ng-template>
         </ngb-tab>
       </ngb-tabset>
     </div>
-  </div>
+  </div> -->
+
+  <mat-tab-group animationDuration="0ms" [color]="red">
+    <mat-tab label="Création annonce"><app-tab-creation></app-tab-creation></mat-tab>
+    <mat-tab label="Mes annonces"><app-tab-announce></app-tab-announce></mat-tab>
+    <mat-tab label="Historique">Cay pas fé</mat-tab>
+  </mat-tab-group>
 </div>
