--- a/src/app/Seller/page-announce-pro/tab-creation/tab-creation.component.css
+++ b/src/app/Seller/page-announce-pro/tab-creation/tab-creation.component.css
@@ -52,3 +52,13 @@ pre {
     display: inline;
     }
 }
+
+.arrow {
+    font-size: 1em;
+    margin-bottom: 0;
+    font-weight: 900;
+}
+.card-header{
+    background-color: black;
+    color: white;
+}
