--- a/src/app/Seller/page-announce-pro/tab-creation/tab-creation.component.html
+++ b/src/app/Seller/page-announce-pro/tab-creation/tab-creation.component.html
@@ -1,7 +1,7 @@
 <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
 
 <div class="container mt-3">
-  <form [formGroup]="creationAnnounceForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="creationAnnounceB" (ngSubmit)="onSubmit()">
     <div class="row mt-1">
       <div class="col-md-5 mt-5">
         <div id="card-74095">
@@ -17,229 +17,12 @@
             <div id="card-element-616950" class="collapse">
               <div class="card-body">
                   
-                <div class="input-group mb-3">
-                  <select [ngModel]="value" class="custom-select" id="selectMarque" (click)="getMarque()">
-                    <option selected="">Marque...</option>
-
-                    <option value="243">ACTION BIKE</option>
-
-                    <option value="160">ADLY</option>
-
-                    <option value="3">APRILIA</option>
-
-                    <option value="165">AZTRAL</option>
-
-                    <option value="70">BAOTIAN</option>
-
-                    <option value="6">BAROSSA</option>
-
-                    <option value="214">BEMI</option>
-
-                    <option value="118">BENDA</option>
-
-                    <option value="7">BENELLI</option>
-
-                    <option value="8">BETA</option>
-
-                    <option value="12">BMW</option>
-
-                    <option value="14">CAGIVA</option>
-
-                    <option value="125">CF MOTO</option>
-
-                    <option value="102">CONTI</option>
-
-                    <option value="88">CPI</option>
-
-                    <option value="17">DAELIM</option>
-
-                    <option value="18">DERBI</option>
-
-                    <option value="19">DUCATI</option>
-
-                    <option value="237">EGLMOTOR</option>
-
-                    <option value="134">EUROCKA</option>
-
-                    <option value="135">FANTIC</option>
-
-                    <option value="250">FASPIDER</option>
-
-                    <option value="1">GENERIC</option>
-
-                    <option value="21">GILERA</option>
-
-                    <option value="139">GOWINN</option>
-
-                    <option value="22">HARLEY DAVIDSON</option>
-
-                    <option value="218">HI BIRD</option>
-
-                    <option value="23">HM</option>
-
-                    <option value="25">HONDA</option>
-
-                    <option value="26">HRD</option>
-
-                    <option value="213">HUIBANG</option>
-
-                    <option value="28">HUSQVARNA</option>
-
-                    <option value="29">HYOSUNG</option>
-
-                    <option value="110">HYTRACK</option>
-
-                    <option value="147">IMF</option>
-
-                    <option value="252">INDIAN</option>
-
-                    <option value="150">JIAJUE</option>
-
-                    <option value="151">JIALING</option>
-
-                    <option value="68">JINCHENG</option>
-
-                    <option value="107">JINLUN</option>
-
-                    <option value="247">JM MOTORS</option>
-
-                    <option value="76">JONWAY</option>
-
-                    <option value="212">JORDON</option>
-
-                    <option value="32">KAWASAKI</option>
-
-                    <option value="33">KEEWAY</option>
-
-                    <option value="156">KREIDLER</option>
-
-                    <option value="34">KTM</option>
-
-                    <option value="35">KYMCO</option>
-
-                    <option value="233">LEONE</option>
-
-                    <option value="175">LIFAN</option>
-
-                    <option value="159">LINGBEN</option>
-
-                    <option value="86">LINHAI</option>
-
-                    <option value="207">LINTEX</option>
-
-                    <option value="170">LML</option>
-
-                    <option value="96">LONGJIA</option>
-
-                    <option value="225">MAG POWER</option>
-
-                    <option value="37">MALAGUTI</option>
-
-                    <option value="38">MASAI</option>
-
-                    <option value="210">MASH</option>
-
-                    <option value="202">MATRA</option>
-
-                    <option value="39">MBK</option>
-
-                    <option value="41">MOTO GUZZI</option>
-
-                    <option value="221">MOTO MORINI</option>
-
-                    <option value="79">MOTOBECANE</option>
-
-                    <option value="42">MV AGUSTA</option>
-
-                    <option value="43">MZ</option>
-
-                    <option value="167">NECO</option>
-
-                    <option value="219">OMING</option>
-
-                    <option value="194">ORCAL</option>
-
-                    <option value="44">PEUGEOT</option>
-
-                    <option value="45">PGO</option>
-
-                    <option value="46">PIAGGIO</option>
-
-                    <option value="94">PIONEER</option>
-
-                    <option value="95">QINGQI</option>
-
-                    <option value="199">QUADRO</option>
-
-                    <option value="174">RAZZ STEED</option>
-
-                    <option value="84">RENAULT</option>
-
-                    <option value="66">REVATTO</option>
-
-                    <option value="166">RIDE</option>
-
-                    <option value="49">RIEJU</option>
-
-                    <option value="65">ROADSIGN</option>
-
-                    <option value="198">SAMPO</option>
-
-                    <option value="104">SANLI</option>
-
-                    <option value="249">SCOMADI</option>
-
-                    <option value="101">SHENKE</option>
-
-                    <option value="53">SHERCO</option>
-
-                    <option value="69">SKYTEAM</option>
-
-                    <option value="189">SMC</option>
-
-                    <option value="217">SONIK</option>
-
-                    <option value="241">SPEEDCOOL</option>
-
-                    <option value="54">SUZUKI</option>
-
-                    <option value="197">SWEETY</option>
-
-                    <option value="55">SYM</option>
-
-                    <option value="240">TAIZHOU</option>
-
-                    <option value="209">TAOTAO</option>
-
-                    <option value="56">TGB</option>
-
-                    <option value="119">TNT</option>
-
-                    <option value="73">TRITON</option>
-
-                    <option value="58">TRIUMPH</option>
-
-                    <option value="90">VASTRO</option>
-
-                    <option value="162">VECTRIX</option>
-
-                    <option value="61">VESPA</option>
-
-                    <option value="188">WANGYE</option>
-
-                    <option value="63">YAMAHA</option>
-
-                    <option value="226">YAMASAKI</option>
-
-                    <option value="67">YIYING</option>
-
-                    <option value="193">ZHENHUA</option>
-
-                    <option value="245">ZHONGNENG</option>
-
-                    <option value="185">ZNEN</option>
-
-                    <option value="77">ZONGSHEN</option>
+                <div class="input-group mb-3 form-group">
+                  <select  class="custom-select" id="brand" formControlName="brand" (click)="getMarque()">
+                    <!-- <option selected="">Kawasaki</option>
+                    <option selected="">Honda</option>
+                    <option selected="">Yamaha</option> -->
+                    <option *ngFor="let moto of motos">{{moto}}</option>
                   </select>
                 </div>
 
